--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
   },
